Fixed route urls in all handlers and generated swagger specs
* Base path already has /api in main. No need to add here
