# docs/swagger.json
@@ -7,7 +7,7 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/api/companies": {
+        "/companies": {
             "post": {
                 "description": "Creates a new company with the provided details",
                 "consumes": [
@@ -65,7 +65,7 @@
                 }
             }
         },
-        "/api/companies/{id}": {
+        "/companies/{id}": {
             "get": {
                 "description": "Retrieves a company's details by its ID",
                 "consumes": [
@@ -235,7 +235,28 @@
                 }
             }
         },
-        "/api/login": {
+        "/health": {
+            "get": {
+                "description": "Check the health of the database connection.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Check the health of the database connection.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
             "post": {
                 "description": "Verifies password using bcrypt comparison.\nGenerates new JWT access token using ECDSA encryption.\nSets HTTP-only cookie with new access token.",
                 "consumes": [
@@ -287,7 +308,7 @@
                 }
             }
         },
-        "/api/register": {
+        "/register": {
             "post": {
                 "description": "Hashes password using bcrypt before storage.\nGenerates JWT access token using ECDSA encryption.\nSets HTTP-only cookie with access token.",
                 "consumes": [
@@ -338,27 +359,6 @@
                     }
                 }
             }
-        },
-        "/health": {
-            "get": {
-                "description": "Check the health of the database connection.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "health"
-                ],
-                "summary": "Check the health of the database connection.",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -369,6 +369,9 @@
                     "type": "integer"
                 },
                 "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
                     "type": "string"
                 },
                 "description": {
